Listo para subir

--- a/tema04/practicas/t04_2022_2023.md
+++ b/tema04/practicas/t04_2022_2023.md
@@ -18,7 +18,7 @@ sudo apt install docker-compose
 ```bash
 git clone urlRepositorio
 ```
-**3.** Accede al directorio donde se encuentra tu proyecto. Crea dentro el fichero Dockerfile y configúralo.
+**3.** Accede al directorio donde se encuentra tu proyecto. Crea dentro el fichero Dockerfile y configúralo. 
 
 **4.** Antes de generar la imagen, vamos a modificar dentro del archivo index.js de nuestro proyecto (src/app.module.ts si tu proyecto ha sido hecho con Nest) la ruta a la cual se conecta la base de datos:
 
@@ -51,7 +51,27 @@ Lo que estamos haciendo con esto es decirle a la base de datos que debe conectar
 
 **Nota:** Esto mismo lo deberéis hacer en el fichero que tenéis en el proyecto para generar los usuarios de la aplicación.
 
-**5.** Generamos la imagen de nuestro servicio web
+**5.** Antes de generar la imagen vamos a cambiar de nuestro proyecto dos cosas:
+> **5.1** En el archivo de package.json vamos a indicar en la zona de script que se ejecute el proyecto ("start": "node ."), y para ello tendremos en el bloque scripts:
+
+```json
+"scripts": {    
+    "start": "node .",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+```
+> **5.2** El segundo paso será importar el archivo generar_usuarios.js para que antes de lanzarse la aplicación se ejecute, y esto lo haremos en nuestro index.js:
+```js
+...
+// Ejecutamos el script de los usuarios primero
+import './utils/generar_usuarios.js'; 
+// Resto de nuestro código
+
+...
+```
+
+
+**6.** Generamos la imagen de nuestro servicio web
 ```bash
 sudo docker build -t <usuario docker-hub>/<nombre de la imagen> .
 ```
@@ -59,10 +79,6 @@ sudo docker build -t <usuario docker-hub>/<nombre de la imagen> .
 Y comprobamos que la imagen ha sido creada correctamente con:
 ```bash
 sudo docker images
-```
-**6.** El siguiente punto sería crearnos una imagen de mongo, pero podemos usar la última que tengan disponible, aunque este paso en nuestro caso no es necesario ejecutarlo ya que en el caso de no tenerla cuando lancemos nuestro despliegue en el caso de no tenerlo disponible se lo descargará
-```bash
-sudo docker run --name mongodb -d mongo
 ```
 **7.** Creamos y configuramos nuestro fichero de despliegue docker-compose.yml, recuerda que este fichero debe estar fuera de la raíz de nuestro proyecto:
 
