--- a/tema04/t04_02.md
+++ b/tema04/t04_02.md
@@ -724,7 +724,7 @@ Sirve para descargar las imágenes de los servicios definidos en el fichero dock
 >
 > En este ejercicio vamos a desplegar una aplicación de prueba donde utilizaremos un servidor web, y una base de datos. El servidor web será una API REST en nodejs como hemos estado haciendo hasta ahora, de modo que nos permitirá consultar los contactos que van a estar almacenados en la base de datos de mongo.
 >
-> Para ello, vamos a aprovechar los conocimientos que tenemos de git y clonaremos el repositorio que tenemos con el ejemplo de tareas que realizamos en el tema 2.2. Veamos como hacer todo paso a paso.
+> Para ello, vamos a aprovechar los conocimientos que tenemos de git y clonaremos el repositorio que tenemos con el ejemplo de contactos que realizamos en el tema 3.2. Veamos como hacer todo paso a paso.
 >
 > **1.** Instala docker y docker-composer en tu máquina virtual de Ubuntu.
 > 
@@ -755,7 +755,7 @@ sudo docker build -t <usuario docker-hub>/<nombre de la imagen> .
 > Ejemplo en mi caso:
 
 ```
-sudo docker build -t rmmgomez/contactos-node .
+sudo docker build -t rmmgomez/contactos-2.3 .
 ```
 > donde rmmgomez será el usuario de tu Docker hub. El parámetro -t será para especificar el tag de la imagen que vamos a crear, y el punto para indicar que la imagne será de la ruta actual. Una vez ejecutado el comando pasamos a ver las imágenes que tenemos con $ sudo docker images.
 
