Aclaraciones sobre problemas en la configuracion de passenger 4.1.4.3

--- a/tema04/t04_01.md
+++ b/tema04/t04_01.md
@@ -667,23 +667,22 @@ En este caso, no es muy recomendable tener que acceder a las aplicaciones Node p
 
 *Passenger* es un servidor web que permite trabajar con aplicaciones desarrolladas en varios frameworks, como por ejemplo Ruby o Node. Al igual que *forever*, monitoriza las aplicaciones para volver a levantarlas si caen, pero ofrece algunas ventajas adicionales que no tiene *forever*, como el balanceo de carga. Además, dispone de módulos para integrarse con los servidores Apache o Nginx, de forma que, utilizando los mismos puertos, podemos hacer que estos servidores "pasen" a Passenger las aplicaciones que indiquemos en los correspondientes archivos de configuración. 
 
-Veamos los pasos a seguir para instalar Passenger y comunicarlo con Apache.
+Veamos los pasos a seguir para instalar Passenger y comunicarlo con Apache. 
 
 1. Instalamos Passenger y el módulo para Apache a través del repositorio oficial. Cada comando *sudo* a continuación debe introducirse en una sola línea independiente del resto, en el mismo orden.
 
 ```
-sudo apt-get install -y dirmngr gnupg
+## Install our PGP key and add HTTPS support for APT
+sudo apt-get install -y dirmngr gnupg apt-transport-https ca-certificates
 
-sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 
---recv-keys 561F9B9CAC40B2F7
+sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 561F9B9CAC40B2F7
 
-sudo apt-get install -y apt-transport-https ca-certificates
-
-sudo sh -c 'echo deb https://oss-binaries.phusionpassenger.com/
-apt/passenger stretch main > /etc/apt/sources.list.d/passenger.list'
+# Add our APT repository
+sudo sh -c 'echo deb https://oss-binaries.phusionpassenger.com/apt/passenger buster main > /etc/apt/sources.list.d/passenger.list'
 
 sudo apt-get update
 
+# Install Passenger + Apache module
 sudo apt-get install -y libapache2-mod-passenger
 ```
 
@@ -691,7 +690,7 @@ sudo apt-get install -y libapache2-mod-passenger
 
 ```
 sudo a2enmod passenger
-sudo systemctl restart apache2
+sudo apache2ctl restart
 ```
 
 3. Verificar la instalación antes de continuar. 
@@ -741,13 +740,23 @@ sudo ln -s /etc/apache2/sites-available/app.node.conf
 sudo systemctl reload apache2
 ```
 
-7. Ahora nuestra nueva web ya debe estar visible y operativa. Podemos también comprobarlo con el comando `curl`, además del navegador:
+7. Configura el archivo hosts. Para hacer que el host virtual funcione, es necesario agregar una entrada en el archivo /etc/hosts que apunte a la dirección IP de tu servidor. Para ello, edita el fichero con el siguiente comando: `sudo nano /etc/hosts` y añade en el fichero la siguiente línea: `127.0.1.1   vps-xxxxxxxx.vps.ovh.net    vps-xxxxxxxx`.    
+
+8. Ahora nuestra nueva web ya debe estar visible y operativa. Podemos también comprobarlo con el comando `curl`, además del navegador:
 
 ```
 curl http://www.tu_dominio.com
 ```
 
 Estos pasos están sacados de la [web oficial](https://www.phusionpassenger.com/library/walkthroughs/deploy/nodejs/ownserver/integration_mode.html). También allí se puede obtener cómo instalar Passenger de forma autónoma (*standalone*), y también integrado con Nginx.
+
+En la anterior web oficial no aparece cómo realizar la instalación en un Debian 10, pero puedes consultar esta [otra página](https://www.phusionpassenger.com/docs/advanced_guides/install_and_upgrade/apache/install/oss/buster.html) donde se indican todos los pasos para esta version de Debian.
+
+**NOTA:** La actual versión de Passenger no funciona actualmente con las versiones 14+ de Node.js debido al uso de una variable de configuración obsoleta. Para arreglar este problema basta con cambiar el de la variable `GLOBAL` a `global` en el archivo `/usr/share/passenger/helper-scripts/node-loader.js`. A continuación, reinicia el servidor web Apache.
+
+**NOTA:** En Debian el paquete node se instala con el nombre "node". Sin embargo, en algunos casos se crea un enlace simbólico desde "node" a "nodejs", por lo que también se puede usar el comando "nodejs". Passenger utiliza el comando "nodejs" para lanzar este tipo de aplicaciones, por lo que si ese enlace simbólico no se ha creado no podrá lanzar nuestra aplicación. PAra comprobarlo ve al directorio /urs/bin y comprueba si tienes tanto el comando node como el nodejs. Si solo tienes node, necesitas crear un enlace simbólico al mismo llamado nodejs: `sudo ln -s /usr/bin/node /usr/bin/nodejs`, o bien hacer una copia: `sudo cp /usr/bin/node /usr/bin/nodejs`.
+
+**NOTA:** En ocasiones el navegador solicita un archivo favicon.ico de la URL que está intentando acceder, pero si tu aplicación no lo tiene saldrá un error en el archivo de logs (`/var/log/apache/error.log`) indicando que el servidor no encuentra dicho archivo. Para solucionarlo, puedes agregar un archivo favicon.ico a tu aplicación de la siguiente forma: descarga un archivo favicon.ico (por ejemplo, `https://iconos8.es/icons/set/favicon`) y almacénalo, por ejemplo, en la carpeta `/views` de tu aplicación Node. A continuación, incluye un enlace al archivo favicon.ico en la cabecera del fichero `base.njk`, de la siguiente forma: `<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">`
 
 
 ### 4.1.5. Instalar servidores de bases de datos
