--- a/tema04/t04_01.md
+++ b/tema04/t04_01.md
@@ -1,5 +1,17 @@
 # Tema 4. Despliegue de aplicaciones
 
+Una vez visto cómo funciona un servidor web local y cómo se construye una web sobre él, ya sea PHP sobre Apache, ASP.NET sobre IIS, JSP sobre Tomcat, Node o cualquier otro, conviene también saber los pasos a seguir para poner en marcha dicho servidor y dicha(s) web(s) en un entorno real, en lo que se conoce como el *paso a producción*. 
+
+Este proceso implica realizar pruebas exhaustivas, solucionar problemas de configuración y dependencias, migrar los datos (si es necesario), preparar todos los recursos necesarios en el entorno de producción y finalmente realizar el despliegue de la misma en dicho entorno. Este último paso implica la transferencia de archivos, la configuración de servidores, la activación de servicios y cualquier otro paso necesario para poner la aplicación en funcionamiento.
+
+Hoy en día existen varias formas de desplegar una aplicación web. Algunas de las opciones más comunes son las siguientes: 
+* Servidores remotos compartidos
+* Servidores virtuales privados
+* Servicios de alojamiento en la nube 
+* Plataforma como servicio (PaaS)
+* Contenedores y orquestadores
+
+
 ## 4.1. Despliegue de aplicaciones en servidores remotos
 
 Una vez visto cómo funciona un servidor web local y cómo se construye una web sobre él, ya sea PHP sobre Apache, ASP.NET sobre IIS, JSP sobre Tomcat, Node o cualquier otro, conviene también saber los pasos a seguir para poner en marcha dicho servidor y dicha(s) web(s) en un entorno real, en lo que se conoce como el *paso a producción*.
