--- a/tema04/t04_01.md
+++ b/tema04/t04_01.md
@@ -5,12 +5,13 @@ Una vez visto cómo funciona un servidor web local y cómo se construye una web 
 Este proceso implica realizar pruebas exhaustivas, solucionar problemas de configuración y dependencias, migrar los datos (si es necesario), preparar todos los recursos necesarios en el entorno de producción y finalmente realizar el despliegue de la misma en dicho entorno. Este último paso implica la transferencia de archivos, la configuración de servidores, la activación de servicios y cualquier otro paso necesario para poner la aplicación en funcionamiento.
 
 Hoy en día existen varias formas de desplegar una aplicación web. Algunas de las opciones más comunes son las siguientes: 
-* Servidores remotos compartidos
-* Servidores virtuales privados
-* Servicios de alojamiento en la nube 
-* Plataforma como servicio (PaaS)
-* Contenedores y orquestadores
+* **Servidores remotos**: el despliegue de una aplicación web puede realizarse en servidores remotos, los cuales pueden ser dedicados o compartidos. En un servidor remoto dedicado, la aplicación se aloja en un servidor exclusivo, lo que ofrece mayor control y rendimiento, aunque puede ser más costoso. Por otro lado, en un servidor remoto compartido, la aplicación comparte recursos con otras aplicaciones en el mismo servidor, lo que lo hace más económico, aunque puede haber limitaciones en cuanto a rendimiento y personalización. La elección entre uno y otro dependerá de las necesidades específicas de la aplicación y los recursos disponibles.
+* **Servidores virtuales privados (*VPS, Virtual Private Server*)**: un VPS es un servidor que se ejecuta sobre un entorno de virtualización, el cual permite crear varios servidores virtuales independientes dentro de un único servidor físico. Cada VPS dispone de sus propios recursos y sistema operativo. En él es posible instalar y configurar una aplicación web de manera más flexible, ya que se tiene un mayor control sobre los recursos y configuraciones del servidor. Por contra, requiere más conocimientos técnicos para administrarlo.
+* **Servicios de alojamiento en la nube**: hay varios proveedores de servicios en la nube, como *Amazon Web Services (AWS)*, *Google Cloud Platform (GCP)* y *Microsoft Azure*, que ofrecen servicios de alojamiento de aplicaciones web. Estos servicios te permiten desplegar tu aplicación en servidores virtuales o contenedores y escalar fácilmente según tus necesidades. También ofrecen servicios adicionales como bases de datos, almacenamiento y balanceo de carga.   
+* **Plataforma como servicio (PaaS)**:  las plataformas como servicio, como *Heroku*, *Firebase* o *Netlify*, proporcionan un entorno de ejecución para aplicaciones web sin que sea necesario preocuparse por la infraestructura subyacente. Estas plataformas suelen ofrecer un enfoque más simplificado y rápido para el despliegue, pero pueden tener limitaciones en cuanto a personalización y flexibilidad.
+* **Contenedores y orquestadores**: se pueden utilizar tecnologías de contenedores como *Docker* y orquestadores como *Kubernetes* para desplegar y administrar aplicaciones web en entornos distribuidos. Estas tecnologías permiten empaquetar la aplicación junto con todas sus dependencias en un contenedor, lo que facilita la portabilidad y la escalabilidad.
 
+A continuación profundizaremos en el despliegue de aplicaciones web en servidores remotos y servidores virtuales privados. 
 
 ## 4.1. Despliegue de aplicaciones en servidores remotos
 
